--- a/trunk/Application/Home/Mobile/default/Public/head.html
+++ b/trunk/Application/Home/Mobile/default/Public/head.html
@@ -1,6 +1,6 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0">
+<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0">
 
 <link href="__LIB__/Common/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <!--<link href="__LIB__/Common/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">-->
