增加手机版本导航

--- a/trunk/Application/Home/Mobile/default/Article/details.html
+++ b/trunk/Application/Home/Mobile/default/Article/details.html
@@ -35,6 +35,13 @@
 </block>
 <block name="body">
     <div class="container-fluid lg-body-container md-body-container" style="padding:0px!important">
+        <div class="row">
+            <div class="col-sm-12">
+                <ul class="nav nav-pills">
+                    <li class="active"><a href="{:U('Home/Index/index','',false)}/cid/-1">我的笔记本</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="row" style="padding:0px!important">
             <div class="col-sm-12" style="padding:0px!important">
                     <h4 class="text-center">{$article_info.title}</h4>
