添加个人签名

--- a/trunk/Application/Home/Mobile/default/Public/header.html
+++ b/trunk/Application/Home/Mobile/default/Public/header.html
@@ -3,7 +3,12 @@
         <div class="row">
             <div class="col-md-6 col-sm-6 col-xs-12 top-social">
                 <div class="navbar-header">
-                    <a href="#" class="navbar-brand">我的笔记本</a>
+                    <div>
+                        <span><a href="#" class="navbar-brand">我的笔记本</a></span>
+                        <span class="navbar-brand-tag" style="float: right;height: auto;padding: 5px 5px;font-size: 13px;line-height: 20px;color: #1bbc9b;">
+                            心存梦想，全世界都会为你让路。无论工作有多忙，我都将抽出精力维护自己的笔记本，finghting！
+                        </span>
+                    </div>
                 </div>
             </div><!--/ Top social end -->
 
